added rtl, ltr, strickout, underline and clear formatting to the paragraph section

--- a/NeatEditor.Core.css
+++ b/NeatEditor.Core.css
@@ -38,6 +38,10 @@
     background-color: #fff;
 }
 
+.NarmandNeatEditor .Sections .Section *{
+    outline:none;
+}
+
 .NarmandNeatEditor .Sections .Section .ToolsWrapper {
     width: 40px;
     position: absolute;
