added a class to sanitizate htnl elements by WhiteList still not implemented in copy past of the paragraph section

--- a/NeatEditor.Core.css
+++ b/NeatEditor.Core.css
@@ -115,6 +115,7 @@
     border-radius: 8px;
     cursor: pointer;
     padding:2px;
+    outline:none;
 }
 
 .NarmandNeatEditor .Toolbar .Tool:hover {
