added "create link" to the paragraph ptovider added "Heading section provider" seprated paragraph provider from the editor core file
there is a bug in "SanitizationHelper" that create infinit loops in IE and Chrome.

Signed-off-by: Arash Milani <me@arashmilani.com>

--- a/NeatEditor.Paragraph.css
+++ b/NeatEditor.Paragraph.css
@@ -21,3 +21,7 @@
 .NarmandNeatEditor .Toolbar .ChanegeDirectionToRightToLeft {
     background: url(Images/Paragraph.ChanegeDirectionToRightToLeft.png) no-repeat center center;
 }
+
+.NarmandNeatEditor .Toolbar .CreateLink {
+    background: url(Images/Paragraph.CreateLink.png) no-repeat center center;
+}
