--- a/NeatEditor.css
+++ b/NeatEditor.css
@@ -1,2 +1,4 @@
 ﻿@import url("NeatEditor.Core.css");
 @import url("NeatEditor.Paragraph.css");
+@import url("NeatEditor.Image.css");
+@import url("NeatEditor.Heading.css");
