some style bugs fix, and removed input "names" from image plugin so does not confilict with user inputs
Signed-off-by: Arash Milani <me@arashmilani.com>

--- a/NeatEditor.Core.css
+++ b/NeatEditor.Core.css
@@ -4,6 +4,7 @@
     border: 1px solid #a6a6a6;
     background: url(Images/SectionTagsBg.png) repeat-y #fff;
     font-family: Helvetica;
+    direction: ltr;
 }
 
 .NarmandNeatEditorRightToLeft {
