--- a/NeatEditor.Core.css
+++ b/NeatEditor.Core.css
@@ -7,6 +7,14 @@
     direction: ltr;
 }
 
+.NarmandNeatEditor * {
+    font-weight: normal;
+    font-family: Helvetica !important;
+    font-style: normal;
+    font-size: 100%;
+    outline:none;
+}
+
 .NarmandNeatEditorRightToLeft {
     direction: rtl;
 }
@@ -45,7 +53,11 @@
     border-radius: 5px;
     background-color: #fff;
     border: 1px dashed #cacac8;
-    padding: 2px 4px 3px 4px;
+    padding: 0 4px;
+    font-size:11px;
+    color:#6c6f70;
+    height:20px;
+    line-height:20px;
 }
 
 .NarmandNeatEditorRightToLeft .SectionAdders .SectionAdder {
@@ -125,6 +137,11 @@
 
 .NarmandNeatEditor .Sections .HtmlCode .Content textarea {
     border: 0;
+    padding:0;
+    outline:0;
+    font-family:Courier !important;
+    font-size:14px;
+    color:Gray;
     resize: vertical;
     height: 90px;
 }
