--- a/NeatEditor.Heading.css
+++ b/NeatEditor.Heading.css
@@ -2,6 +2,7 @@
     color:#fff;
     background-color:#712d41;
     width:52px;
+    top:9px;
     left:-72px;
 }
 
@@ -9,4 +10,7 @@
     border:0;
     font-size:20px;
     font-weight:bold;
+    height:auto;
+    outline:none;
+    padding:0;
 }
